fix for roadmap on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -685,7 +685,7 @@ h3 {
   }
   .roadmap_container {
     margin: 0;
-    padding: 0rem;
+    padding: 1em;
     flex-direction: column;
   }
   .roadmap {
